--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -42,7 +42,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Ajoy - Portfolio</title>
+
+  <!-- Primary Meta Tags -->
+  <title>Ajoy - Full Stack Web Developer</title>
+  <meta name="title" content="Ajoy - Full Stack Web Developer">
+  <meta name="description"
+    content="An aspiring Full Stack web developer, crafting exceptional web experiences with innovative technologies and a commitment to excellence.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ajoy10.netlify.app/">
+  <meta property="og:title" content="Ajoy - Full Stack Web Developer">
+  <meta property="og:description"
+    content="An aspiring Full Stack web developer, crafting exceptional web experiences with innovative technologies and a commitment to excellence.">
+  <meta property="og:image" content="">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://ajoy10.netlify.app/">
+  <meta property="twitter:title" content="Ajoy - Full Stack Web Developer">
+  <meta property="twitter:description"
+    content="An aspiring Full Stack web developer, crafting exceptional web experiences with innovative technologies and a commitment to excellence.">
+  <meta property="twitter:image" content="">
 </head>
 
 <body>
