--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -14,7 +14,6 @@
   <link rel="shortcut icon" href="/images/icons/favicon.ico">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="msapplication-config" content="/images/icons/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
 
 
 
@@ -26,8 +25,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,400&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web portfolio of Ajoy" />
+  <meta name="theme-color" content="#0d41e1" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -51,19 +49,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ajoy10.netlify.app/">
+  <meta property="og:url" content="%PUBLIC_URL%">
   <meta property="og:title" content="Ajoy - Full Stack Web Developer">
   <meta property="og:description"
     content="An aspiring Full Stack web developer, crafting exceptional web experiences with innovative technologies and a commitment to excellence.">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="%PUBLIC_URL%/images/meta_image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://ajoy10.netlify.app/">
+  <meta property="twitter:url" content="%PUBLIC_URL%">
   <meta property="twitter:title" content="Ajoy - Full Stack Web Developer">
   <meta property="twitter:description"
     content="An aspiring Full Stack web developer, crafting exceptional web experiences with innovative technologies and a commitment to excellence.">
-  <meta property="twitter:image" content="">
+  <meta property="twitter:image" content="%PUBLIC_URL%/images/meta_image.png">
 </head>
 
 <body>
